# pipeline-pilot-test

./: README.md  pyproject.toml
.pipeline/: journal.jsonl  state.json
docs/superpowers/plans/: 2026-05-03-test-pipeline-pilot.md
docs/superpowers/specs/: 2026-05-01-test-pipeline-pilot-design.md
src/pilot/: __init__.py
tests/: test_math.py
