[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot"
version = "0.1.0"
requires-python = ">=3.11"
description = "Pipeline E2E pilot — trivial add function"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
